hard-gists/265e68a5e879b5540ebc/run.log
=== Docker Run Log for 265e68a5e879b5540ebc ===
Started at: Mi 29. Okt 13:11:20 CET 2025

[2025-10-29 13:11:21] START: Running container for 265e68a5e879b5540ebc
[2025-10-29 13:11:21] SUCCESS: Container 2247d3ccd4a42e1d1037b9b45eb80170d679a760cd04268fb70d7b57e6b87d2b started for 265e68a5e879b5540ebc
=== Container logs for 265e68a5e879b5540ebc ===
  File "/snippet.py", line 59
    print "Centroids:"
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 265e68a5e879b5540ebc ===
[2025-10-29 13:11:23] INFO: Container 2247d3ccd4a42e1d1037b9b45eb80170d679a760cd04268fb70d7b57e6b87d2b has stopped
